--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Responsive web designing</title>
   </head>
   <body>
-    <<h1>Places</h1>
+    <<h1>Tourist Places</h1>
     <div class="mainDiv">
       <div class="sub1">
         <img src="new.jpg" alt="First">
